--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.0.4
 distlib==0.3.1
 filelock==3.0.12
 Flask==2.0.3
+gunicorn==20.1.0
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
